# EasyAudioSync

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml  release.yml
assets/icons/: easyaudiosync.icns  icons.qrc  windows.rc
cmake/: vcpkg.cmake
config/: PKGBUILD  appdata.xml.in  easyaudiosync.desktop.in  easync.hpp.in  metainfo.xml.in
config/flatpak/: io.github.complexlogic.EasyAudioSync.yml  sources.yml
docs/: building.md  settings.md
src/: CMakeLists.txt  about.cpp  about.hpp  config.cpp  config.hpp  main.cpp  main.hpp  metadata.cpp  metadata.hpp  settings.cpp  settings.hpp  sync.cpp  sync.hpp  transcode.cpp  transcode.hpp  util.cpp  util.hpp
src/ui/: about.ui  clean_dest_warning.ui  mainwindow.ui  settings.ui  settings_aac.ui  settings_file_handling.ui  settings_general.ui  settings_mp3.ui  settings_ogg_vorbis.ui  settings_opus.ui  settings_transcoding.ui
translations/: README.md  en.ts  languages.hpp.in  languages.txt  source.ts  translations.qrc.in
